[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/attacks/Trail.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0220994, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 0.703125, 0, 1 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Line2D1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Line2D2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Line2D3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Trail" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D1" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 30, 10 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 1 )
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 30, 10 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 1 )
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D3" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 30, 10 )
width = 3.0
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 1 )
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="destroyTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )

[connection signal="timeout" from="destroyTimer" to="." method="_on_destroyTimer_timeout"]
